--- a/source/_templates/navbar-nav.html
+++ b/source/_templates/navbar-nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top bd-navbar" id="navbar-main">
+<nav class="bd-header navbar navbar-light navbar-expand-lg bg-light fixed-top bd-navbar" id="navbar-main">
     <div class="container-xl">
        <div id="navbar-start">
           <a class="navbar-brand" href="https://henilp105.github.io/fortran-lang.org/">
