--- a/source/_templates/index.html
+++ b/source/_templates/index.html
@@ -128,9 +128,9 @@
                         </div>
                         <div id="navbar-collapsible" class=" collapse navbar-collapse">
                            <span id="theme-switch" class="btn-sm btn-outline-primary navbar-btn rounded-circle">
-                              <a class="theme-switch" data-mode="light"><i class="fas fa-sun"></i></a>
-                              <a class="theme-switch" data-mode="dark"><i class="far fa-moon"></i></a>
-                              <a class="theme-switch" data-mode="auto"><i class="fas fa-adjust"></i></a>
+                              <a class="theme-switch" href="#" data-mode="light"><i class="fas fa-sun"></i></a>
+                              <a class="theme-switch" href="#" data-mode="dark"><i class="far fa-moon"></i></a>
+                              <a class="theme-switch" href="#" data-mode="auto"><i class="fas fa-adjust"></i></a>
                            </span>
                            <div id="navbar-center" class="ml-auto">
                               <div class="navbar-center-item">
@@ -337,7 +337,7 @@
                         <h3>Write Fortran software</h3>
                         <p>
                            Or just write Fortran software for your research, business, or schoolwork.
-                           You can learn how to get started <a href="learn.html">here</a>.
+                           You can <a href="learn.html">learn how to get started here</a>.
                         </p>
                      </div>
 
