--- a/source/_templates/index.html
+++ b/source/_templates/index.html
@@ -185,7 +185,7 @@
                                           <label class="sr-only">GitHub</label></a>
                                     </li>
                                     <li class="nav-item">
-                                       <a class="nav-link" href="https://fortran-lang.org/news.xml" rel="noopener"
+                                       <a class="nav-link" href="news/atom.xml" rel="noopener"
                                           target="_blank" title="RSS"><span><i class="fas fa-rss"></i></span>
                                           <label class="sr-only">RSS</label></a>
                                     </li>
