sphinx design with i18n

--- a/source/_templates/navbar-nav.html
+++ b/source/_templates/navbar-nav.html
@@ -16,6 +16,23 @@
             <a class="theme-switch" data-mode="dark"><i class="far fa-moon"></i></a>
             <a class="theme-switch" data-mode="auto"><i class="fas fa-adjust"></i></a>
         </span>
+
+        <div class="dropdown" id="version_switcher">
+         <button type="button" class="btn btn-sm navbar-btn dropdown-toggle" id="version_switcher_button" data-toggle="dropdown">
+          language
+             <span class="caret"></span>
+         </button>
+         <div id="version_switcher_menu" class="dropdown-menu list-group-flush py-0" aria-labelledby="version_switcher_button">
+         <a class="list-group-item list-group-item-action py-1" href="../de/{{pagename}}.html"><span>de</span></a>
+         <a class="list-group-item list-group-item-action py-1" href="../en/{{pagename}}.html"><span>en</span></a>
+         <a class="list-group-item list-group-item-action py-1" href="../es/{{pagename}}.html"><span>es</span></a>
+         <a class="list-group-item list-group-item-action py-1" href="../fr/{{pagename}}.html"><span>fr</span></a>
+         <a class="list-group-item list-group-item-action py-1" href="../ja/{{pagename}}.html"><span>ja</span></a>
+         <a class="list-group-item list-group-item-action py-1" href="../nl/{{pagename}}.html"><span>nl</span></a>
+         <a class="list-group-item list-group-item-action py-1" href="../zh_CN/{{pagename}}.html"><span>zh_CN</span></a>
+         </div>
+     </div>
+
           <div id="navbar-center" class="ml-auto">
              <div class="navbar-center-item">
                 <ul id="navbar-main-elements" class="navbar-nav">
@@ -80,7 +97,7 @@
              </div>
           </div><form class="bd-search d-flex align-items-center" action="search.html" method="get"> <i
              class="icon fas fa-search"></i> <input type="search" class="form-control" name="q" id="search-input"
-             placeholder="Search" aria-label="Search" autocomplete="off"> </form><div id="google_translate_button"></div>
+             placeholder="Search" aria-label="Search" autocomplete="off"> </form>
  
        </div>
     </div>
