--- a/source/_templates/footer.html
+++ b/source/_templates/footer.html
@@ -1,25 +1,25 @@
 <footer>
   <div class="container">
-     <a  href="https://henilp105.github.io/fortran-lang.org/learn/index.html">
+     <a  href="learn.html">
      Learn
      </a>
-     <a  href="https://henilp105.github.io/fortran-lang.org/compilers.html">
+     <a  href="compilers.html">
      Compilers  
      </a>
-     <a  href="https://henilp105.github.io/fortran-lang.org/community/index.html">
+     <a  href="community.html">
      Community  
      </a>
-     <a href="https://henilp105.github.io/fortran-lang.org/packages/index.html">
+     <a href="packages.html">
      Packages  
      </a>
-     <a  href="https://henilp105.github.io/fortran-lang.org/news.html">
+     <a  href="news.html">
      News       
      </a>
      <div>
      
         &copy; Copyright 2022, Fortran Community.
       <br>
-        This site's source is <a href="https://github.com/henilp105/fortran-lang.org/">hosted on GitHub</a>.
+        This site's source is <a href="https://github.com/fortran-lang/fortran-lang.org/">hosted on GitHub</a>.
      </div>
   </div>
 </footer>
