--- a/source/_templates/index_joinus.html
+++ b/source/_templates/index_joinus.html
@@ -16,7 +16,7 @@
    data-size="large">@fortranlang</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <h4><i class="fas fa-rss"></i> RSS feed</h4>
-<p>RSS clients can follow the <a href="news.xml" target="_blank">RSS feed</a>.</p>
+<p>RSS clients can follow the <a href="news/atom.xml" target="_blank">RSS feed</a>.</p>
 <h4><i class="fab fa-github"></i> Open source</h4>
 <p>
    Contribute code, report bugs and request features at
