--- a/source/_templates/navbar-nav.html
+++ b/source/_templates/navbar-nav.html
@@ -2,7 +2,7 @@
    <div class="container-xl">
       <div id="navbar-start">
          <a class="navbar-brand" href="{{pathto('index',1)[:-5]}}index.html">
-            <img src="https://henilp105.github.io/fortran-lang.org/en/_static/images/fortran-logo-256x256.png" class="logo"
+            <img src="{{pathto('index',1)[:-5]}}_static/images/fortran-logo-256x256.png" class="logo"
                alt="logo">
          </a>
       </div>
