--- a/source/_templates/index_news.html
+++ b/source/_templates/index_news.html
@@ -14,4 +14,21 @@
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </br>
 
-{% endif %}{% endif %}
+{% endif %}
+
+{% if pathto('index',1)[:-5] =='../../' %}
+<br>
+{% set page_toc = generate_toc_html() %}
+
+{%- if page_toc | length >= 1 %}
+<div class="tocsection onthispage">
+    <i class="fas fa-list"></i> {{ _("On this page") }}
+</div>
+{%- endif %}
+
+<nav id="bd-toc-nav" class="page-toc">
+  {{ page_toc }}
+</nav>
+{%- endif %}
+
+{% endif %}
