minor bug fix for mobile version.

--- a/source/_templates/index_sidebar.html
+++ b/source/_templates/index_sidebar.html
@@ -1,4 +1,5 @@
 {% if pagename == 'index' %}
+<div class="index_joinus">
 <h3 id="chat"><p style="color:#734f96;">Join us!</p> </h3>
 <h4> <i class="fas fa-envelope-open-text"></i> Mailing list</h4>
 <p>Subscribe to our <a href="https://groups.io/g/fortran-lang" target="_blank">mailing list</a>
@@ -21,7 +22,7 @@
 <p>
    Contribute code, report bugs and request features at
    <a href="https://github.com/fortran-lang" target="_blank">GitHub</a>.
-</p>
+</p></div>
 {% endif %}
 
 
