design enhancements and changes

--- a/source/_templates/navbar-nav.html
+++ b/source/_templates/navbar-nav.html
@@ -99,22 +99,22 @@
                <ul id="navbar-icon-links" class="navbar-nav" aria-label="Icon Links">
                   <li class="nav-item">
                      <a class="nav-link" href="https://fortran-lang.discourse.group/" rel="noopener" target="_blank"
-                        title="Discourse"><span><i class="fab fa-discourse"></i></span>
+                        title="Discourse"><span><i class="fab fa-discourse" style="color:#734f96"></i></span>
                         <label class="sr-only">Discourse</label></a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="https://twitter.com/fortranlang" rel="noopener" target="_blank"
-                        title="Twitter"><span><i class="fab fa-twitter"></i></span>
+                        title="Twitter"><span><i class="fab fa-twitter" style="color:#734f96"></i></span>
                         <label class="sr-only">Twitter</label></a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="https://github.com/fortran-lang" rel="noopener" target="_blank"
-                        title="GitHub"><span><i class="fab fa-github"></i></span>
+                        title="GitHub"><span><i class="fab fa-github" style="color:#734f96"></i></span>
                         <label class="sr-only">GitHub</label></a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="{{pathto('index',1)[:-5]}}news/atom.xml" rel="noopener" target="_blank"
-                        title="RSS"><span><i class="fas fa-rss"></i></span>
+                        title="RSS"><span><i class="fas fa-rss" style="color:#734f96"></i></span>
                         <label class="sr-only">RSS</label></a>
                   </li>
                </ul>
